# sber-mqtt-bridge

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_ENG.md  README_RU.md  hacs.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  repository.yaml  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  tester_feedback.yml
.github/workflows/: ci.yaml  constraints.txt  docs.yml  hacs.yml  hassfest.yml  release.yaml  sber-compliance.yml
AUDIT_REPORT/: index.html
ENTITY_REGISTRY/: index.html
ROADMAP/: index.html
api/: index.html
api/bridge/: index.html
api/command-dispatcher/: index.html
api/devices/: index.html
api/entity-map/: index.html
api/entity-registry/: index.html
api/ha-state-forwarder/: index.html
api/message-logger/: index.html
api/models/: index.html
api/mqtt-client-service/: index.html
api/protocol/: index.html
api/utils/: index.html
api/websocket-api/: index.html
changelog/: index.html
configuration/: index.html
contributing/: index.html
custom_components/sber_mqtt_bridge/: __init__.py  ack_audit.py  command_dispatcher.py  config_flow.py  const.py  custom_capabilities.py  device_grouper.py  devtools_hub.py  diagnostics.py  diagnostics_advisor.py  entity_registry.py  ha_state_forwarder.py  manifest.json  message_logger.py  mqtt_client_service.py  name_utils.py  quality_scale.yaml  reconnect_ack_guard.py  redefinitions_store.py  repairs.py  sber_bridge.py  sber_constants.py  sber_entity_map.py  sber_models.py  (+7 more)
devices/: index.html
docs/: AUDIT_REPORT.md  ENTITY_LINKING_PLAN.md  ENTITY_REGISTRY.md  HACS_SILVER_REQUIREMENTS.md  INTEGRATION_TESTS_PLAN.md  ROADMAP.md  changelog.md  configuration.md  contributing.md  devices.md  index.md  installation.md  mem.txt  mqtt-flow.md  sber-setup.md  troubleshooting.md
installation/: index.html
mqtt-flow/: index.html
mqtt_sber_gate/: CHANGELOG.md  config.yaml
sber-c2c-spec/: index.html
sber-setup/: index.html
sber_mqtt_bridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
search/: search_index.json
tools/: bump_version.py  codegen.py  fetch_sber_schemas.py
troubleshooting/: index.html
(+270 files in other folders)
